--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* カスタムスタイル */
 body {
-    font-family: "MS Pゴシック", "MS PGothic", sans-serif;
+    font-family: "游ゴシック", "Yu Gothic", "YuGothic", sans-serif;
     background-color: #0a0a0a;
     color: #e0e0e0;
     overflow-x: hidden;
